# data-challenge

./: case_2.html  case_2.ipynb  case_3.ipynb  pyproject.toml  sql_test.sql
case_1/: case_1.py
