[project]
name = "looqbox-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "mysql-connector-python>=9.7.0",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
]
